# Photonics_Analysis

./: CMakeLists.txt  Definitionen.txt  Diff 1.txt  PhotonicsAssistant_Analysis_Diff2.c  PhotonicsAssistant_Analysis_Main.c  PhotonicsAssistant_Analysis_Main.h  makefile  tempMain.c
Analysis/src/: malloc.c
src/: Analysis_Main.c  FragenSteller.c  FragenSteller.h  Main.c  PhotonicsAssistant_Analysis_DE.c  PhotonicsAssistant_Analysis_DE.h  PhotonicsAssistant_Analysis_Main.c  PhotonicsAssistant_Analysis_Main.h
